--- a/CapturaVideo/CapturaMultiplasCameras.csproj
+++ b/CapturaVideo/CapturaMultiplasCameras.csproj
@@ -99,6 +99,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\DataTable.cs" />
+    <Compile Include="Model\Dtos\ConfigurationDto.cs" />
+    <Compile Include="Model\Dtos\DeviceDto.cs" />
     <Compile Include="Model\Enums\ELegendAlign.cs" />
     <Compile Include="Model\SqlLite.cs" />
     <Compile Include="View\About.cs">
