--- a/CapturaVideo/app.config
+++ b/CapturaVideo/app.config
@@ -1,20 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <system.windows.forms jitDebugging="false" />
-  <startup><supportedRuntime version="v2.0.50727" /></startup>
+  <system.windows.forms jitDebugging="false"/>
+  <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
   <runtime>
+    <legacyCasPolicy enabled="true"/>
+    <loadFromRemoteSources enabled="true"/>
+    <NetFx40_LegacySecurityPolicy enabled="true"/>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="ZedGraph" publicKeyToken="02a83cbd123fcd60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.1.7.430" newVersion="5.1.7.430" />
+        <assemblyIdentity name="ZedGraph" publicKeyToken="02a83cbd123fcd60" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.1.7.430" newVersion="5.1.7.430"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Accord.Video" publicKeyToken="fa1a88e29555ccf7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.8.0.0" newVersion="3.8.0.0" />
+        <assemblyIdentity name="Accord.Video" publicKeyToken="fa1a88e29555ccf7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.8.0.0" newVersion="3.8.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Accord" publicKeyToken="fa1a88e29555ccf7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.8.0.0" newVersion="3.8.0.0" />
+        <assemblyIdentity name="Accord" publicKeyToken="fa1a88e29555ccf7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.8.0.0" newVersion="3.8.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
