--- a/CapturaVideo/packages.config
+++ b/CapturaVideo/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper" version="1.40" targetFramework="net35" />
+  <package id="Accord" version="3.8.0" targetFramework="net45" />
+  <package id="Accord.Video" version="3.8.0" targetFramework="net45" />
+  <package id="Accord.Video.FFMPEG" version="3.8.0" targetFramework="net45" />
+  <package id="Dapper" version="1.40" targetFramework="net35" requireReinstallation="true" />
   <package id="ILMerge" version="3.0.21" targetFramework="net35" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net35" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net35" requireReinstallation="true" />
 </packages>
