fix: Otimização no uso de memória.

--- a/CapturaVideo/MultiCam.csproj
+++ b/CapturaVideo/MultiCam.csproj
@@ -101,9 +101,6 @@
     <Reference Include="Dapper, Version=1.30.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.1.30\lib\net45\Dapper.dll</HintPath>
     </Reference>
-    <Reference Include="DirectX.Capture">
-      <HintPath>..\DirectX.Capture\bin\Debug\DirectX.Capture.dll</HintPath>
-    </Reference>
     <Reference Include="DShowNET">
       <HintPath>..\DShowNET\bin\Debug\DShowNET.dll</HintPath>
     </Reference>
@@ -277,6 +274,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DirectX.Capture\DirectX.Capture.csproj">
+      <Project>{8c0015db-69e1-46e7-8705-3a4f8be2e5e7}</Project>
+      <Name>DirectX.Capture</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
