--- a/MultiCam.App/packages.config
+++ b/MultiCam.App/packages.config
@@ -3,6 +3,5 @@
   <package id="Accord" version="3.8.0" targetFramework="net45" />
   <package id="Accord.Video" version="3.8.0" targetFramework="net45" />
   <package id="Accord.Video.FFMPEG" version="3.8.0" targetFramework="net45" />
-  <package id="Dapper" version="1.30" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net35" requireReinstallation="true" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
 </packages>
