--- a/MultiCam.UnitTests/MultiCam.UnitTests.csproj
+++ b/MultiCam.UnitTests/MultiCam.UnitTests.csproj
@@ -117,6 +117,15 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MultiCam.Domain\MultiCam.Domain.csproj">
+      <Project>{0e9b2d9c-3575-48cb-bcec-e5f4941b4210}</Project>
+      <Name>MultiCam.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
